# deadline_calender

./: .gitignore  Agent_plan.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: implementation_plan.md
scripts/: install_linux_launcher.sh  run_release.sh
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: providers.tsx  routes.tsx
src/features/reminders/: calc.ts  notification.ts  scheduler.ts  slack.ts
src/features/tasks/: schema.ts  service.ts
src/features/tasks/components/: TaskForm.tsx
src/features/tasks/hooks/: useTasks.ts
src/pages/: DashboardPage.tsx  SettingsPage.tsx  TaskDetailPage.tsx  TaskEditPage.tsx  TaskListPage.tsx
src/shared/db/: sqlite.ts
src/shared/types/: task.ts
src/shared/utils/: date.ts  error.ts
